Added css for the book cards and header

--- a/index.html
+++ b/index.html
@@ -53,40 +53,64 @@
   </header>
 
   <main>
-    
+
     <section>
       <div class="content-wrapper">
-        <h2>This Month's Book Selection:</h2>
-          <div class="book">
-            <img src="./img/book1.jpg" alt="Book 1">
-            <h3>We Are Water Protectors</h3>
-            <p>Author: Carole Lindstrom</p>
-            <p>Ages: 3-6</p>
+        <div class="book-selection">
+          <div class="theme-background">
+            <h2>This Month's Theme:<br><span>Bravery</span></h2>
           </div>
-          <div class="book">
-            <img src="./img/book2.jpg" alt="Book 2">
-            <h3>Napoleon vs. the Bunnies</h3>
-            <p>Author: J. F. Fox</p>
-            <p>Ages: 5-8</p>
-          </div>
-          <div class="book">
-            <img src="./img/book3.jpg" alt="Book 3">
-            <h3>Tomorrow I'll Be Brave</h3>
-            <p>Author: Jessica Hische</p>
-            <p>Ages: 2-5</p>
-          </div>
-          <div class="book">
-            <img src="./img/book4.jpg" alt="Book 4">
-            <h3>Moon Dog</h3>
-            <p>Author: Jane Elson</p>
-            <p>Ages 9-11</p>
-          </div>
-          <div class="book">
-            <img src="./img/book5.jpg" alt="Book 5">
-            <h3>The Koala Who Could</h3>
-            <p>Author: Rachel Bright</p>
-            <p>Ages: 3-5</p>
-          </div>
+            <div class="book">
+              <img src="./img/book1.jpg" alt="Book 1">
+              <div class="book-details">
+                <h3>We Are Water Protectors</h3>
+                <p><span>Conservation</span><span>Native&nbspAmerican</span></p>
+                <p>Author: Carole Lindstrom</p>
+                <p>Ages: 3-6</p>
+                <button><a class="book-link" href="#">Buy Me</a></button>
+              </div>
+            </div>
+            <div class="book">
+              <img src="./img/book2.jpg" alt="Book 2">
+              <div class="book-details">
+                <h3>Napoleon vs. the Bunnies</h3>
+                <p><span>History</span><span>Courage</span><span>French</span></p>
+                <p>Author: J. F. Fox</p>
+                <p>Ages: 5-8</p>
+                <button><a class="book-link" href="#">Buy Me</a></button>
+              </div>
+            </div>
+            <div class="book">
+              <img src="./img/book3.jpg" alt="Book 3">
+              <div class="book-details">
+                <h3>Tomorrow I'll Be Brave</h3>
+                <p><span>Trying&nbspNew&nbspThings</span><span>Inspiration</span></p>
+                <p>Author: Jessica Hische</p>
+                <p>Ages: 2-5</p>
+                <button><a class="book-link" href="#">Buy Me</a></button>
+              </div>
+            </div>
+            <div class="book">
+              <img src="./img/book4.jpg" alt="Book 4">
+              <div class="book-details">
+                <h3>Moon Dog</h3>
+                <p><span>Friendship</span><span>Differences</span></p>
+                <p>Author: Jane Elson</p>
+                <p>Ages 9-11</p>
+                <button><a class="book-link" href="#">Buy Me</a></button>
+              </div>
+            </div>
+            <div class="book">
+              <img src="./img/book5.jpg" alt="Book 5">
+              <div class="book-details">
+                <h3>The Koala Who Could</h3>
+                <p><span>Courage</span><span>Trying&nbspNew&nbspThings</span></p>
+                <p>Author: Rachel Bright</p>
+                <p>Ages: 3-5</p>
+                <button><a class="book-link" href="#">Buy Me</a></button>
+              </div>
+            </div>
+        </div>
       </div> 
     </section>
 
