Added css to the menu

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <!-- Google font - outfit - -->
+  <!-- Google ----- font-outfit ------- icon-menu --->
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -44,7 +46,6 @@
           <li><a class="menuItem" href="#">Reviews</a></li>
         </ul>
         <button class="hamburger">
-          <!-- material icons https://material.io/resources/icons/ -->
           <i class="menuIcon material-icons">menu</i>
           <i class="closeIcon material-icons">close</i>
         </button>
@@ -67,7 +68,7 @@
                 <p><span>Conservation</span><span>Native&nbspAmerican</span></p>
                 <p>Author: Carole Lindstrom</p>
                 <p>Ages: 3-6</p>
-                <button><a class="book-link" href="#">Buy Me</a></button>
+                <button><a class="book-link" href="#">Read Me</a></button>
               </div>
             </div>
             <div class="book">
@@ -77,7 +78,7 @@
                 <p><span>History</span><span>Courage</span><span>French</span></p>
                 <p>Author: J. F. Fox</p>
                 <p>Ages: 5-8</p>
-                <button><a class="book-link" href="#">Buy Me</a></button>
+                <button><a class="book-link" href="#">Read Me</a></button>
               </div>
             </div>
             <div class="book">
@@ -87,7 +88,7 @@
                 <p><span>Trying&nbspNew&nbspThings</span><span>Inspiration</span></p>
                 <p>Author: Jessica Hische</p>
                 <p>Ages: 2-5</p>
-                <button><a class="book-link" href="#">Buy Me</a></button>
+                <button><a class="book-link" href="#">Read Me</a></button>
               </div>
             </div>
             <div class="book">
@@ -97,7 +98,7 @@
                 <p><span>Friendship</span><span>Differences</span></p>
                 <p>Author: Jane Elson</p>
                 <p>Ages 9-11</p>
-                <button><a class="book-link" href="#">Buy Me</a></button>
+                <button><a class="book-link" href="#">Read Me</a></button>
               </div>
             </div>
             <div class="book">
@@ -107,7 +108,7 @@
                 <p><span>Courage</span><span>Trying&nbspNew&nbspThings</span></p>
                 <p>Author: Rachel Bright</p>
                 <p>Ages: 3-5</p>
-                <button><a class="book-link" href="#">Buy Me</a></button>
+                <button><a class="book-link" href="#">Read Me</a></button>
               </div>
             </div>
         </div>
