Added correct labels to footer and css

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <button><a class="book-link" href="#">Read Me</a></button>
               </div>
             </div>
-            <div class="book">
+            <div class="last-book">
               <img src="./img/book5.jpg" alt="Book 5">
               <div class="book-details">
                 <h3>The Koala Who Could</h3>
@@ -114,39 +114,30 @@
         </div>
       </div> 
     </section>
-
-    <section>
-      <div class="content-wrapper">
-        <div class="why-join">
-          <h2>Why Join Our Book Club?</h2>
-          <ul>
-            <li>Connect with other kids who love to read</li>
-            <li>Participate in online discussions</li>
-            <li>Win badges and prizes for completing book selections</li>
-            <li>Improve critical thinking and reading comprehension skills</li>
-          </ul>
-        </div>
-      </div>
-    </section>
   
   </main>
 
   <footer>
     <div class="content-wrapper">
+      <div class="footer-background">&nbsp</div>
       <h2>Join the Book Club</h2>
       <form>
         <label>
-          Name:
+          Kid's Name:<br>
           <input type="text" />
         </label>
         <label>
-          Email:
-          <input type="email" />
+          Grown-up's Name:<br>
+          <input type="text" />
         </label>
         <label>
-          Password:
-          <input type="password" />
+          Grown-up's Email:<br>
+          <input type="email" />
         </label>
+        <div class="tacbox">
+          <input id="checkbox" type="checkbox" />
+          <label for="checkbox"> I agree to these <a href="#">Terms and Conditions</a>.</label>
+        </div>
         <button type="submit">Join Now</button>
       </form>
     </div>
